# s3-parse-url

./: .bumpversion.cfg  .coveragerc  .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: pypi.yml  tox.yml
docs/: sphinx-reload.sh
docs/source/: authors.rst  changelog.rst  conf.py  examples.rst  index.rst  supported_storages.rst
src/s3_parse_url/: __init__.py  base.py  exceptions.py
src/s3_parse_url/ext/: clients.py
src/s3_parse_url/storages/: __init__.py  amazon.py  mail_ru.py  minio.py  selectel.py  yandex.py
tests/: test_base.py  test_s3_parse_url.py  test_version.py
tests/ext/: test_clients.py
tests/storages/: test_amazon.py  test_mail_ru.py  test_minio.py  test_selectel.py  test_yandex.py
