[tool.poetry]
name = "s3-parse-url"
version = "0.2.0"
description = "A small tool to parse URLs for S3 compatible storage services"
authors = [
    "Mikhail Porokhovnichenko <marazmiki@gmail.com>"
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9 || ^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3"
pytest-isort = "^2.0.0"
pytest-flake8 = "^1.0.7"
aioboto3 = "^9.3"
tox = "^3.24.4"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
