[tool.poetry]
name = "s3-parse-url"
version = "0.3.5"
description = "A small tool to parse URLs for S3 compatible storage services"
license = "MIT"
readme = "README.rst"
authors = [
    "Mikhail Porokhovnichenko <marazmiki@gmail.com>"
]
homepage = "https://github.com/marazmiki/s3-parse-url"
repository = "https://github.com/marazmiki/s3-parse-url"

classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-cov = "^5"
pytest-isort = "^4"
aioboto3 = "*"
tox = "4.14.2"
flake8 = "~7.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
